--- a/Gooze/Base.lproj/Main.storyboard
+++ b/Gooze/Base.lproj/Main.storyboard
@@ -1314,9 +1314,12 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tVc-Ok-mps">
-                                        <rect key="frame" x="10" y="158" width="52" height="32"/>
+                                        <rect key="frame" x="10" y="158" width="40" height="32"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                                        <state key="normal" title="Button"/>
+                                        <state key="normal" title="Atrás"/>
+                                        <connections>
+                                            <action selector="backButtonTapped:" destination="66d-od-zfu" eventType="touchUpInside" id="gW2-Hy-uhv"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -1414,7 +1417,6 @@
                         <outlet property="viewHeightConstraint" destination="G6l-yV-Au8" id="3fh-Br-NtB"/>
                         <outlet property="viewLeadingSuperviewLeadingConstrint" destination="5Zp-7f-z2C" id="2na-Z4-3sc"/>
                         <outlet property="viewTopImageContainerBottomConstraint" destination="53P-uU-e2y" id="teY-ob-mKR"/>
-                        <outlet property="viewWidthConstraint" destination="sUX-yO-zJy" id="rBm-lG-Whr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Jp-4V-1S0" userLabel="First Responder" sceneMemberID="firstResponder"/>
