--- a/Gooze/Base.lproj/Main.storyboard
+++ b/Gooze/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="66d-od-zfu">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="du4-Q0-thu">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -1265,13 +1265,6 @@
                                             </mask>
                                         </variation>
                                     </view>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dtK-Tu-fLg">
-                                        <rect key="frame" x="0.0" y="44.5" width="320" height="110"/>
-                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="dtK-Tu-fLg" secondAttribute="height" multiplier="32:11" id="kUE-cc-az6"/>
-                                        </constraints>
-                                    </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7NL-6u-bwj">
                                         <rect key="frame" x="258" y="158" width="52" height="32"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
@@ -1327,9 +1320,6 @@
                                     <constraint firstAttribute="trailing" secondItem="6aJ-Ma-qho" secondAttribute="trailing" constant="10" id="A3R-Ka-X0K"/>
                                     <constraint firstAttribute="width" secondItem="hpx-ee-uC6" secondAttribute="height" multiplier="3:4.8" id="BVj-yz-Tia"/>
                                     <constraint firstAttribute="trailing" secondItem="7NL-6u-bwj" secondAttribute="trailing" constant="10" id="Fxx-g6-acu"/>
-                                    <constraint firstItem="dtK-Tu-fLg" firstAttribute="centerY" secondItem="hpx-ee-uC6" secondAttribute="centerY" id="JIO-82-Cby"/>
-                                    <constraint firstAttribute="trailing" secondItem="dtK-Tu-fLg" secondAttribute="trailing" id="QO2-ub-Oc8"/>
-                                    <constraint firstItem="dtK-Tu-fLg" firstAttribute="leading" secondItem="hpx-ee-uC6" secondAttribute="leading" id="RUb-Xj-fMy"/>
                                     <constraint firstItem="tVc-Ok-mps" firstAttribute="leading" secondItem="hpx-ee-uC6" secondAttribute="leading" constant="10" id="dU4-U3-Hba"/>
                                     <constraint firstAttribute="width" secondItem="hpx-ee-uC6" secondAttribute="height" multiplier="4.8:3" id="iyn-R8-Jf3"/>
                                     <constraint firstAttribute="bottom" secondItem="7NL-6u-bwj" secondAttribute="bottom" constant="10" id="k1h-Dw-Nzu"/>
@@ -1388,7 +1378,6 @@
                         <outlet property="bottomViewHeightConstraint" destination="iyn-R8-Jf3" id="3dV-vo-fkH"/>
                         <outlet property="bottomViewWidthConstraint" destination="BVj-yz-Tia" id="Ilv-Eb-cbK"/>
                         <outlet property="cameraOrReelView" destination="vA2-6o-xIQ" id="x3x-A0-iKp"/>
-                        <outlet property="croppedImageView" destination="dtK-Tu-fLg" id="vNM-Qn-2DT"/>
                         <outlet property="editButton2" destination="ggh-qe-KAT" id="y4m-kE-Oli"/>
                         <outlet property="editButton3" destination="VXL-uD-Iho" id="N1I-Yl-h7C"/>
                         <outlet property="editButton4" destination="vRx-dp-usR" id="QF9-GM-26p"/>
